--- a/views/home.handlebars
+++ b/views/home.handlebars
@@ -2,6 +2,9 @@
 
 
 <section class="register-section section-container">
+
+<div class="inside-container">
+
         <h1>Sign In</h1>
 
         {{>message}}
@@ -27,6 +30,8 @@
         </div>
     </form>
     <p>Do you already have an account? <a href="/login">Log In</a></p>
+
+</div>
 
 
 </section>
