--- a/views/logIn.handlebars
+++ b/views/logIn.handlebars
@@ -2,6 +2,8 @@
 
 <section class="logIn-section section-container">
 
+<div class="inside-container">
+
     <h1>Login</h1>
 
       {{>message}}
@@ -20,5 +22,9 @@
         </div>
     </form>
     <p>Don't have an account? <a href="/home">Sign up</a></p>
+
+</div>
+
+
 
 </section>
