--- a/views/partials/information.handlebars
+++ b/views/partials/information.handlebars
@@ -1,8 +1,27 @@
-<section class="info-seccion">
+<section class="info-seccion left-section">
     {{! PUT HERE THE INFO OF THE PETITON: }}
 
-    <h1>Tired of not founfing your favorite product in the supermarket?</h1>
-    <p>
-        Tired of not founding
-    </p>
+    <div class="info-container">
+
+        <h1>For more Latin product in the supermarket</h1>
+        <p>
+            Tired of not founding your favorite product in the supermarket?
+            Tired of going around the city to found Dulce de Leche, Harina Pan,
+            Alfajores, Tapas de Empandas or Yerba? We want all this Latin produt
+            and more in the supermarket!
+        </p>
+
+        <div class="info-center">
+            <h2>Are you with me?</h2>
+            <p>Sign our petition and make the change come true!</p>
+        </div>
+
+        <div class="img-info">
+            <img src="/img/arepas_mate.png" />
+            <img src="/img/alfajores.png" />
+
+        </div>
+
+    </div>
+
 </section>
