--- a/views/signature.handlebars
+++ b/views/signature.handlebars
@@ -1,4 +1,10 @@
+{{> information}}
+
+
+
 <section class="signature-section section-container">
+
+<div class="inside-container config-container">
 
     {{>message}}
 
@@ -6,7 +12,7 @@
 
         <img src="{{signature}}" />
 
-        <h3>Are you sure that you want to delete your signature</h3>
+        <h3>Are you sure that you want to delete your signature?</h3>
 
         <div class="buttons-container">
 
@@ -16,4 +22,6 @@
         </div>
 
     </form>
+</div>
+
 </section>
