--- a/views/newPassword.handlebars
+++ b/views/newPassword.handlebars
@@ -1,22 +1,26 @@
+{{> products}}
+
 <section class="newPassword-section section-container">
 
-    <form class="form-container" method="post">
+    <div class="inside-container config-container">
 
-        <h3>Change Password</h3>
+        <h1>Change Password</h1>
 
-            {{>message}}
+        {{>message}}
 
+        <form class="form-container config-form" method="post">
 
-        <label for="password">NEW Password</label>
-        <input id="password" type="password" name="new" required />
+            <label for="password">NEW Password</label>
+            <input id="password" type="password" name="new" required />
 
-        <label for="password">Old Password</label>
-        <input id="password" type="password" name="old" required />
+            <label for="password">Old Password</label>
+            <input id="password" type="password" name="old" required />
 
-        <div class="buttons-container">
-            <button type="submit">Confirm</button>
-            <a href="/configuration" class="likeButton">Back</a>
-        </div>
+            <div class="buttons-container">
+                <button type="submit">Confirm</button>
+                <a href="/configuration" class="likeButton">Back</a>
+            </div>
+        </form>
+    </div>
 
-    </form>
 </section>
