Fixing Bug empty Spaces Edit Profile

--- a/views/configProfile.handlebars
+++ b/views/configProfile.handlebars
@@ -53,9 +53,9 @@
                 />
 
                 {{! Here or do a nuw section this is for a new password!!! this should be empty}}
-                <p>Confirm Password to save changes.</p>
+                {{!-- <p>Confirm Password to save changes.</p>
                 <label for="password">Password</label>
-                <input id="password" type="password" name="password" required />
+                <input id="password" type="password" name="password" required /> --}}
 
             {{/user}}
 
