--- a/views/moreInfo.handlebars
+++ b/views/moreInfo.handlebars
@@ -23,7 +23,10 @@
 
             <div class="buttons-container">
                 <button type="submit">Save Changes</button>
-                 <a href="/petition">Skip this</a>
+                <input type="submit">Skip this</input>
+
+
+                 {{!-- <a href="/petition">Skip this</a> --}}
 
 
             </div>
