--- a/views/deleteAccount.handlebars
+++ b/views/deleteAccount.handlebars
@@ -17,7 +17,7 @@
 
             <div class="buttons-container">
                 <button type="submit">Confirm</button>
-                <a href="/configuration" class="likeButton">Cancel</a>
+                 <a href="/configuration " class="cancel-Button likeButton">Cancel</a>
             </div>
 
         </form>
