--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -36,6 +36,8 @@
 
         </main>
 
-        <footer>&copy; MGCzI 2022</footer>
+        <footer>&copy; MGCzI
+            <script>document.write(new Date().getFullYear())</script>
+        </footer>
     </body>
 </html>
