--- a/views/thanks.handlebars
+++ b/views/thanks.handlebars
@@ -4,6 +4,8 @@
 <section class="thanks-section section-container">
 
 <div class="inside-container config-container">
+        {{>message}}
+
     {{#user}}
 
         <h1>Thank you {{name}} {{surname}}!</h1>
