--- a/views/newPassword.handlebars
+++ b/views/newPassword.handlebars
@@ -18,7 +18,7 @@
 
             <div class="buttons-container">
                 <button type="submit">Confirm</button>
-                <a href="/configuration" class="likeButton">Back</a>
+                 <a href="/configuration" class="back-Button likeButton">Back</a>
             </div>
         </form>
     </div>
