Fis bug in Profile, it was adding when u press skip

--- a/views/moreInfo.handlebars
+++ b/views/moreInfo.handlebars
@@ -22,8 +22,8 @@
             <input id="profilePage" type="url" name="profilePage" />
 
             <div class="buttons-container">
-                <button type="submit">Save Changes</button>
-                <button type="submit">Skip this</button>
+                <button type="submit" name="buttonAdd">Save Changes</button>
+                <button type="submit" name="buttonSkipThis">Skip this</button>
 
 
             </div>
