Fix spelling mistakes

--- a/views/partials/products.handlebars
+++ b/views/partials/products.handlebars
@@ -29,7 +29,7 @@
 
         <div class="product">
             <img src="/img/tapa_empanadas.jpg" />
-            <p>Tapa de Empanadas</p>
+            <p>Tapas de Empanadas</p>
         </div>
 
         <div class="product">
