--- a/views/signers.handlebars
+++ b/views/signers.handlebars
@@ -4,7 +4,7 @@
 
 <div class="inside-container  config-container table-container">
 
-    <h1>List of the singers</h1>
+    <h1>List of the signers</h1>
 
     {{#if nameCity}}
         <h2>In the city of: {{nameCity}}</h2>
